sfdx-src/main/default/objects/PLM_Workflow_Action__c/PLM_Workflow_Action__c.object-meta.xml
<CustomObject>
    <label>PLM Workflow Action</label>
    <nameField>
        <label>PLM Workflow Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PLM Workflow Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>