sfdx-src/main/default/objects/PLM_Workflow_Action__c/fields/Action_Name__c.field-meta.xml
<CustomField>
    <fullName>Action_Name__c</fullName>
    <label>Action Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>