sfdx-src/main/default/objects/PLM_Workflow_Action__c/fields/PLM_Stage_Task_Dependency__c.field-meta.xml
<CustomField>
    <fullName>PLM_Stage_Task_Dependency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PLM Stage Task Dependency</label>
    <referenceTo>PLM_Stage_Task_Dependency__c</referenceTo>
    <relationshipLabel>PLM Workflow Action (PLM Stage Task Dependency)</relationshipLabel>
    <relationshipName>PLMWA2STD</relationshipName>
    <type>Lookup</type>
</CustomField>