sfdx-src/main/default/objects/PLM_Workflow_Action__c/fields/PLM_Workflow_Rule__c.field-meta.xml
<CustomField>
    <fullName>PLM_Workflow_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PLM Workflow Rule</label>
    <referenceTo>PLM_Workflow_Rule__c</referenceTo>
    <relationshipLabel>PLM Workflow Actions</relationshipLabel>
    <relationshipName>PLM_Workflow_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>